--- a/index.html
+++ b/index.html
@@ -87,23 +87,41 @@ header {
     color: var(--accent);
 }
 
-/* Hero */
+/* ===============================
+   Hero (2カラム構成 / PCのみ)
+================================= */
+
 .hero {
     background: linear-gradient(135deg, #1f2f3a, #2f3f4c);
     color: white;
-    text-align: center;
-    padding: 4rem 1rem;
+    padding: 5rem 1rem;
 }
-.hero h2 {
-    font-size: 1.9rem;
+
+.hero-inner {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    align-items: stretch;
+    gap: 3rem;
+}
+
+.hero-left {
+    flex: 2;  /* 2/3 */
+    text-align: left;
+}
+
+.hero-left h2 {
+    font-size: 1.8rem;
     margin-bottom: 1.5rem;
     line-height: 1.6;
 }
-.hero p {
-    font-size: 1.1rem;
+
+.hero-left p {
+    font-size: 1.05rem;
     opacity: 0.9;
 }
-.hero .btn {
+
+.hero-left .btn {
     display: inline-block;
     margin-top: 1.5rem;
     background: var(--accent);
@@ -114,11 +132,62 @@ header {
     text-decoration: none;
     transition: 0.3s;
 }
-.hero .btn:hover,
-.contact-form button:hover {
+
+.hero-left .btn:hover {
     background: #a8894a;
 }
 
+/* 右側：情報提供ボックス */
+.hero-right {
+    flex: 1;  /* 1/3 */
+}
+
+.info-box {
+    background: white;
+    color: var(--text-main);
+    padding: 2rem;
+    height: 100%;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    border-left: 5px solid var(--accent);
+}
+
+.info-box h3 {
+    margin-top: 0;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    border-bottom: 2px solid var(--accent);
+    padding-bottom: 0.5rem;
+}
+
+.info-box a {
+    display: block;
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--primary);
+    padding: 0.5rem 0;
+    transition: 0.3s;
+}
+
+.info-box a:hover {
+    color: var(--accent);
+}
+
+/* スマホは縦並び */
+@media (max-width: 768px) {
+    .hero-inner {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .hero-left {
+        text-align: center;
+    }
+
+    .hero-right {
+        width: 100%;
+    }
+}
 /* Container */
 .container {
     max-width: 1100px;
@@ -503,11 +572,10 @@ footer a:hover {
 <body>
 
 <header>
-   <div class="header-logo">
-        <img src="logo_SP2.png" alt="logo_SP2">
-        <img src="行政書士マーク.png" alt="行政書士マーク">
-        <span>德永 行政書士事務所</span>
-   </div>
+<div class="header-logo">
+    <img src="gyosei_logo_192.png" alt="ペンギンロゴ">
+    <span>德永 行政書士事務所</span>
+</div>
 
    <!-- ハンバーガーボタン -->
    <div class="hamburger" id="hamburger">
@@ -533,14 +601,35 @@ footer a:hover {
 </header>
 
 <section class="hero">
-    <div class="container" style="padding:0;">
-       <h2>
+    <div class="hero-inner">
+
+        <!-- 左 2/3 -->
+        <div class="hero-left">
+            <h2>
 事業の種々の申請、暮らしでの相続、遺言そして在留許可のことで<br>
 「どこに相談したらいいかわからない」<br>
 そんな段階からでも、お気軽にご連絡下さい。
-</h2>
-        <p>神戸の行政書士・徳永良雄が誠意をもってご対応いたします。</p>
-        <a href="#contact" class="btn">お問い合わせはこちら</a>
+            </h2>
+
+            <p>
+神戸の行政書士・徳永良雄が誠意をもってご対応いたします。
+            </p>
+
+            <a href="#contact" class="btn">お問い合わせはこちら</a>
+        </div>
+
+        <!-- 右 1/3 -->
+        <div class="hero-right">
+            <div class="info-box">
+                <h3>情報のご提供</h3>
+
+                <a href="#">
+                    2026年の蓄電池の補助金について
+                </a>
+
+            </div>
+        </div>
+
     </div>
 </section>
 
